# YandexDisk_To_DropBox

./: .gitignore  LICENSE  README.md  pyproject.toml  sync_exclude.txt  yd2dbx
src/yd2dbx/: __init__.py  classifier.py  cli.py  config.py  db.py  diff_engine.py  models.py  paths.py  progress.py  reporting.py  runner.py  sync_runner.py  transport.py
src/yd2dbx/clients/: __init__.py  dropbox.py  yandex_disk.py
tests/: test_clients.py  test_config_classifier.py  test_db.py  test_diff_engine.py  test_progress.py  test_reporting_cli.py  test_runner.py  test_sync_runner.py  test_transport.py
