[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yd2dbx"
version = "0.1.0"
description = "Safe-first Yandex Disk to Dropbox migration CLI"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
yd2dbx = "yd2dbx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
